--- a/7/index.html
+++ b/7/index.html
@@ -18,9 +18,22 @@
 
     <div class="black-background" id="black">
         <div class="white-background">
-
+            <p>로그인하세요</p>
         </div>
     </div>
+
+    <div class="nav-menu">
+        <h4 style="margin: 0">Shirts Studio</h4>
+        <a href="#" id="nav-sub-button">Products</a>
+    </div>
+
+    <ul class="list-group nav-sub">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+    </ul>
 
     <div class="jumbotron main-background">
         <h1 class="display-4">Hello, world!</h1>
@@ -31,6 +44,7 @@
     </div>
 
     <script>
+    // 버튼 누르면 모달창 보이게 하기
 
     // 자바스크립트
     // document.getElementById('btn').addEventListener('click', function(){
@@ -41,6 +55,14 @@
     // $('#btn').click(function() { 
     //     $('.black-background').show();
     // });
+
+    // 메뉴 토글 
+
+    // 제이쿼리
+    $('#nav-sub-button').click(function(){
+        $('.nav-sub').slideToggle();
+    });
+
     
     </script>
 
