--- a/8/index.html
+++ b/8/index.html
@@ -20,6 +20,7 @@
 
 <body>
 
+  <!-- 모달창 -->
   <div class="black-background" id="black">
     <div class="white-background">
       <form action="login.php">
@@ -38,11 +39,13 @@
     </div>
   </div>
 
+  <!-- 메뉴 -->
   <div class="nav-menu">
     <h4 style="margin: 0">Shirts Studio</h4>
     <a href="#" id="nav-sub-button">Products</a>
   </div>
 
+  <!-- 슬라이더 메뉴 -->
   <ul class="list-group nav-sub">
     <li class="list-group-item">An item</li>
     <li class="list-group-item">A second item</li>
@@ -51,6 +54,7 @@
     <li class="list-group-item">And a fifth one</li>
   </ul>
 
+  <!-- 메인 -->
   <div class="jumbotron main-background">
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
@@ -61,20 +65,6 @@
   </div>
 
   <script>
-    // if (3 < 1) {
-    //   console.log('맞습니다');
-    // } else { 
-    //   console.log('아닙니다');
-    // }
-
-    // if (1 == 3) { 
-    //   console.log('1과 3은 같습니다');
-    // } else if (1 == 2) {
-    //   console.log('1과 2는 같습니다'); 
-    // } else { 
-    //   console.log('둘다 틀렸습니다');
-    // }
-
     // 버튼 누르면 모달창 보이게 하기
 
     // 자바스크립트
