--- a/8/index.html
+++ b/8/index.html
@@ -20,6 +20,10 @@
 
 <body>
 
+  <div class="left-menu">
+    <p>Menu Title</p>
+  </div>
+
   <!-- 모달창 -->
   <div class="black-background" id="black">
     <div class="white-background">
@@ -61,10 +65,79 @@
       featured content or information.</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" id="btn" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" id="login" role="button">Login</a>
+    <a class="btn btn-danger btn-lg" id="show-menu" role="button">Show Menu</a>
   </div>
 
+  <h4 class="my-4 text-center">Showcase</h4>
+
+  <div style="overflow: hidden; position:relative;">
+  <div class="slide-container">
+
+    <div class="slide-box"> 
+      <img src="cloth1.PNG" alt="">
+    </div>
+    <div class="slide-box"> 
+      <img src="cloth2.PNG" alt="">
+    </div>
+    <div class="slide-box"> 
+      <img src="cloth3.PNG" alt="">
+    </div>
+  </div>
+  <button class="slide-next">Next</button>
+  <button class="slide-before">Before</button>
+</div>
+
+  <button class="slide-1">1</button>
+  <button class="slide-2">2</button>
+  <button class="slide-3">3</button>
+
+  <div class="my-5"></div>
+
   <script>
+
+    var 지금보이는사진 = 1;
+
+    $('.slide-next').click(function() {
+
+      $('.slide-container').css('transform','translateX(-' + 지금보이는사진 + '00vw)');
+
+      if ( 지금보이는사진 < 3 ) {
+        지금보이는사진 = 지금보이는사진 + 1;
+      }
+
+    });
+
+    $('.slide-before').click(function() {
+
+      $('.slide-container').css('transform','translateX(-' + (지금보이는사진 - 2) + '00vw)');
+
+      if ( 지금보이는사진 > 1) {
+        지금보이는사진 = 지금보이는사진 -1;
+      }
+
+    });
+
+      // if( 지금보이는사진 == 1 ){
+      // $('.slide-container').css('transform','translateX(-100vw)');
+      // 지금보이는사진 = 지금보이는사진 + 1;
+      //   } else if( 지금보이는사진 == 2 ) {
+      //     $('.slide-container').css('transform','translateX(-200vw)');
+      //     지금보이는사진 = 지금보이는사진 + 1;
+      //   }
+
+    $('.slide-2').click(function() {
+      $('.slide-container').css('transform','translateX(-100vw)');
+    });
+
+    $('.slide-3').click(function() {
+      $('.slide-container').css('transform','translateX(-200vw)');
+    });
+
+    $('#show-menu').click(function() {
+      $('.left-menu').animate({marginLeft: '0px'}, 500);
+    });
+    
     // 버튼 누르면 모달창 보이게 하기
 
     // 자바스크립트
@@ -86,23 +159,52 @@
     만약에 패스워드 input에 입력된 값이 빈칸인 경우에
     폼의 전송을 막고 안내문을 띄운다
      */
+
     $('form').on('submit', function(e) {
-      if ($('#email').val() == '') {
+
+      let 입력한이메일 = $('#email').val();
+
+      /* 숙제 3. 이메일 형식 검증 & 공백 검사를 동시에 */
+
+      if(/\S+@\S+\.\S+/.test('입력한이메일') == false ) {
         e.preventDefault();
-        $('#email-alert').show();
+      } else if('입력한이메일' == '') {
+        e.preventDefault();
       }
-      else if ($('#password').val() == '') {
+
+      /* 숙제 2. 패스워드에 대문자가 없으면 폼 전송 X */
+
+      var 입력한패스워드 = $('#password').val();
+      if(/[A-Z]+/.test('입력한패스워드') == false ) {
         e.preventDefault();
         $('#password-alert').show();
       }
+
+
+
+
+      // if ($('#email').val() == '') {
+      //   e.preventDefault();
+      //   $('#email-alert').show();
+      // }
+      // else if ($('#password').val() == '') {
+      //   e.preventDefault();
+      //   $('#password-alert').show();
+      // }
     });
+
+    /* 이메일 형식 검증기능 만들기 */
+    
+    // /\S@/.test('test@');
+
+    // /\S+@\S+\.\S+/.test('test@test.com');
 
     $('#close').click(function () {
       $('.black-background').fadeOut();
     });
 
-    $('#btn').click(function () {
-      $('.black-background').fadeIn();
+    $('#login').click(function () {
+      $('.black-background').css('transform', 'translateY(0px)');
     });
 
     // 메뉴 토글 
